@@ -30,6 +30,7 @@
 - Fix: [#6320] Crash when CSS1.DAT is absent.
 - Fix: [#6331] Scenery costs nothing in track designs.
 - Fix: [#6360] Off-by-one filenames when exporting all sprites.
+- Fix: [#5585] Inconsistent zooming with mouse wheel.
 - Fix: Infinite loop when removing scenery elements with >127 base height.
 - Fix: Ghosting of transparent map elements when the viewport is moved in OpenGL mode.
 - Improved: [#6186] Transparent menu items now draw properly in OpenGL mode.
